# nextapp/src/data/apiClient/openapi/models/WeatherStudyRequest.ts
@@ -1,0 +1,82 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * MyApi | v1
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { WeatherForecastDto } from './WeatherForecastDto';
+import {
+    WeatherForecastDtoFromJSON,
+    WeatherForecastDtoFromJSONTyped,
+    WeatherForecastDtoToJSON,
+    WeatherForecastDtoToJSONTyped,
+} from './WeatherForecastDto';
+
+/**
+ * 
+ * @export
+ * @interface WeatherStudyRequest
+ */
+export interface WeatherStudyRequest {
+    /**
+     * 
+     * @type {Array<WeatherForecastDto>}
+     * @memberof WeatherStudyRequest
+     */
+    forecasts: Array<WeatherForecastDto>;
+    /**
+     * 
+     * @type {string}
+     * @memberof WeatherStudyRequest
+     */
+    userPrompt?: string | null;
+}
+
+/**
+ * Check if a given object implements the WeatherStudyRequest interface.
+ */
+export function instanceOfWeatherStudyRequest(value: object): value is WeatherStudyRequest {
+    if (!('forecasts' in value) || value['forecasts'] === undefined) return false;
+    return true;
+}
+
+export function WeatherStudyRequestFromJSON(json: any): WeatherStudyRequest {
+    return WeatherStudyRequestFromJSONTyped(json, false);
+}
+
+export function WeatherStudyRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): WeatherStudyRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'forecasts': ((json['forecasts'] as Array<any>).map(WeatherForecastDtoFromJSON)),
+        'userPrompt': json['userPrompt'] == null ? undefined : json['userPrompt'],
+    };
+}
+
+export function WeatherStudyRequestToJSON(json: any): WeatherStudyRequest {
+    return WeatherStudyRequestToJSONTyped(json, false);
+}
+
+export function WeatherStudyRequestToJSONTyped(value?: WeatherStudyRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'forecasts': ((value['forecasts'] as Array<any>).map(WeatherForecastDtoToJSON)),
+        'userPrompt': value['userPrompt'],
+    };
+}
+
