# nextapp/src/data/apiClient/openapi/models/index.ts
@@ -2,3 +2,4 @@
 /* eslint-disable */
 export * from './WeatherAnalysisDto';
 export * from './WeatherForecastDto';
+export * from './WeatherStudyRequest';
